test_case/rust-lang_rust/43250_318893978.rs
Rust
fn main() {
	let y: usize = 1;
	let 0...y = 1; //~ ERROR constant evaluation error
}
